Fix light header logo size on mobile

--- a/themes/base-hugo-theme/assets/scss/seda-custom.scss
+++ b/themes/base-hugo-theme/assets/scss/seda-custom.scss
@@ -300,10 +300,13 @@ nav.navbar-light {
         }
       }
     //height: 33px;
-    width: 290px;
+    width: 238px;
     background-size: 100%;
-      @include media-breakpoint-down(sm) {
-        width: 230px;
+      @include media-breakpoint-up(smm) {
+        width: 276px;
+      }
+      @include media-breakpoint-up(mm) {
+        width: 290px;
       }
     }
     .drawer-toggle {
